Correction alignement Home

--- a/src/Utils/Style/Home.css
+++ b/src/Utils/Style/Home.css
@@ -1,3 +1,9 @@
+#BigWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #IMG {
   object-fit: fill;
   width: auto;
@@ -24,4 +30,17 @@
 
 .imgHome {
   object-fit: cover;
+}
+
+h4 {
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  /* line-height: 142.6%; */
+  /* or 26px */
+  /* display: flex;
+  align-items: flex-end; */
+  margin-left: 1em;
+  color: #ffffff;
 }
